fix:adjust hero translate position on X The translate position is off the screen on mobile of min-width 320px

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -512,7 +512,7 @@ select{
 
   @keyframes hero-effect{
     0%, 80%{
-      transform:translate(2px, 50%) scale(1.2);
+      transform:translate(5%, 50%) scale(1.2);
 
     }
     100%{
